# dlc_manus_repo

./: .gitignore  README.md
backend/: .env.example  API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  INSTALLATION_TROUBLESHOOTING.md  INTEGRATION_SUCCESS_REPORT.md  PERFORMANCE_OPTIMIZATION.md  POSTGRESQL_INTEGRATION_PLAN.md  README.md  SCRAPER_FIX_REPORT.md  SCRAPING_STRATEGY.md  VERIFICATION_REPORT.md  alembic.ini  cemaco_analysis.md  pyproject.toml  requirements.txt  setup.py  test_api.py  test_cemaco_scraper.py  test_end_to_end.py  test_end_to_end_fixed.py  test_fixed_cemaco.py  test_fixed_scraper.py  test_immediate_performance.py  test_new_api.py  test_scrapers.py  test_scrapers_simple.py  test_simple_api.py  test_simple_connection.py  test_working_scraper.py  vtex_api_analysis.md
backend/alembic/versions/: 001_initial_schema.py  002_seed_data.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  categories.py  products.py  search.py  vendors.py  websocket.py
backend/app/models/: __init__.py  category.py  product.py  search.py  vendor.py
backend/app/schemas/: __init__.py  search.py
backend/app/scraping/: __init__.py  base_scraper.py  cemaco_scraper.py  cemaco_scraper_fixed.py  elektra_scraper.py  engine.py  max_scraper.py  walmart_scraper.py
backend/app/services/: __init__.py  search_service.py  search_service_immediate.py  search_service_optimized.py
backend/dlc_api/: __init__.py  main.py  main_new.py  models.py  vendors.py
backend/dlc_api/api/: __init__.py  health.py  search.py
(+13 files in other folders)
