[tool.poetry]
name = "dondelocompro-backend"
version = "0.1.0"
description = "Backend system for dondelocompro.gt product comparison platform"
authors = ["Backend Developer <dev@dondelocompro.gt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.40.0"
celery = "^5.3.0"
redis = "^5.0.0"
python-multipart = "^0.0.6"
websockets = "^12.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.12.13"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

